@@ -248,6 +248,7 @@ wxMac:
 - Fix duplicate (empty) help menu in non-English programs (Andreas Jacobs).
 - Allow accelerators to be used with buttons too (Ryan Wilcox).
 - Support resource forks in wxCopyFile() (Hank Schultz).
+- Implement wxLocale::GetInfo() using CFLocale
 
 wxMSW:
 
